[sonar] 코드 정리