@@ -1,16 +1,16 @@
 package market.api.product.service;
 
 import java.io.File;
+import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import lombok.RequiredArgsConstructor;
@@ -19,6 +19,8 @@ import market.api.product.dto.ProductResDto;
 import market.api.product.entity.Product;
 import market.api.product.repository.ProductRepository;
 import market.lib.constant.Constant;
+import market.lib.enums.RESPONSE_CODE;
+import market.lib.exception.MarketException;
 import market.lib.util.Uuid;
 
 @Service
@@ -30,15 +32,13 @@ public class ProductService {
   private final ModelMapper modelMapper;
   
   public List<ProductResDto.ItemRes> list() {
-    List<ProductResDto.ItemRes> res = productRepository.findAll().get().stream()
+    return productRepository.findAll().stream()
         .map(item -> modelMapper.map(item, ProductResDto.ItemRes.class))
-        .collect(Collectors.toList());
-    return res;
+        .toList();
   }
   
   public ProductResDto.ItemRes detail(Integer productId) {
-    ProductResDto.ItemRes res = modelMapper.map(productRepository.findById(productId).get(), ProductResDto.ItemRes.class);
-    return res;
+    return modelMapper.map(productRepository.findById(productId).orElseThrow(), ProductResDto.ItemRes.class);
   }
   
   @Transactional
@@ -49,27 +49,29 @@ public class ProductService {
           entity.setModifyDate(LocalDateTime.now());
           return entity;
         })
-        .collect(Collectors.toList());
+        .toList();
     entityList = productRepository.saveAll(entityList);
-    List<ProductResDto.ItemRes> res = entityList.stream()
+    return entityList.stream()
         .map(item -> modelMapper.map(item, ProductResDto.ItemRes.class))
-        .collect(Collectors.toList());
-    return res;
+        .toList();
   }
   
   @Transactional
   public ProductResDto.ItemRes saveProduct(ProductReqDto.ItemReq request,
-      MultipartFile imgThumb) throws Exception {
+      MultipartFile imgThumb) throws IllegalStateException, IOException {
     if (imgThumb != null) {
       String originName = imgThumb.getOriginalFilename();
+      if (!StringUtils.hasLength(originName)) {
+        throw new MarketException(RESPONSE_CODE.C001);
+      }
       String originExt = originName.substring(originName.lastIndexOf(".")+1, originName.length());
-      String imgThumbPath = Constant.UPLOAD_BASE + "/product/" + Uuid.create() + "." + originExt;
+      String imgThumbPath = Constant.UPLOAD_BASE_PRODUCT + File.pathSeparator + Uuid.create() + "." + originExt;
       if (System.getProperty("os.name").startsWith("Win")) {
-        File dir = new File("C:"+Constant.UPLOAD_BASE + "/product/");
+        File dir = new File("C:"+Constant.UPLOAD_BASE_PRODUCT);
         if (!dir.exists()) dir.mkdirs();
         imgThumb.transferTo(new File("C:"+imgThumbPath));
       } else {
-        File dir = new File(Constant.UPLOAD_BASE + "/product/");
+        File dir = new File(Constant.UPLOAD_BASE_PRODUCT);
         if (!dir.exists()) dir.mkdirs();
         imgThumb.transferTo(new File(imgThumbPath));
       }
@@ -79,30 +81,14 @@ public class ProductService {
     entity.setModifyDate(LocalDateTime.now());
     entity.setCreateDate(LocalDateTime.now());
     entity = productRepository.save(entity);
-    ProductResDto.ItemRes res = modelMapper.map(entity, ProductResDto.ItemRes.class);
-    return res;
+    return modelMapper.map(entity, ProductResDto.ItemRes.class);
   }
   
   @Transactional
   public ProductResDto.ItemRes deleteProduct(ProductReqDto.ItemReq request) {
     Product entity = modelMapper.map(request, Product.class);
     entity = productRepository.delete(entity);
-    ProductResDto.ItemRes res = modelMapper.map(entity, ProductResDto.ItemRes.class);
-    return res;
-  }
-  
-  public void init() {
-    Product LG_17UD70P = productRepository.findByName("홍길동").orElse(Product.builder().id(-1).build());
-    LG_17UD70P.setName("LG 17UD70P");
-    LG_17UD70P.setImgThumbUrl("https://fastly.picsum.photos/id/26/300/200.jpg?hmac=I1gNv7SHHWumF_lPObGuXN05PIgqI0NueUSdPFnFcq0");
-    LG_17UD70P.setModifyDate(LocalDateTime.now());
-    
-    Product APPLE_IPAD = productRepository.findByName("Apple iPad Air 5").orElse(Product.builder().id(-1).build());
-    APPLE_IPAD.setName("Apple iPad Air 5");
-    APPLE_IPAD.setImgThumbUrl("https://fastly.picsum.photos/id/365/300/200.jpg?hmac=_ZkyfESsHt2RteInYatkFqQ4-OAG2em4hYhUoIJYbD0");
-    APPLE_IPAD.setModifyDate(LocalDateTime.now());
-    
-    productRepository.saveAll(Arrays.asList(APPLE_IPAD, LG_17UD70P));
+    return modelMapper.map(entity, ProductResDto.ItemRes.class);
   }
   
   @Transactional
